@startuml

class User {
    - id: int
    - name: str
    - email: str
    - role: str
    + __str__(): str
}

class Ticket {
    - id: int
    - title: str
    - category: str
    - priority: str
    - status: str
    + change_status(): void
}

class Comment {
    - id: int
    - content: str
    - created_at: str
    + add_comment(): void
}

class History {
    - id: int
    - action: str
    - created_at: str
    + record_action(): void
}

class Article {
    - id: int
    - title: str
    - content: str
    + publish(): void
}


User "1" -- "0..*" Ticket : solicita >

User "0..1" -- "0..*" Ticket : asignado como técnico >

Ticket "1" *-- "0..*" Comment : contiene >

Ticket "1" *-- "0..*" History : registra >

User "1" -- "0..*" Article : crea >

@enduml